Timer wasn't functioning, debugged code and got timer working again.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 
     <main>
       <section>
-  
+  <div class="questions" id="?"></div>
+  <div>
+    <button onclick="checkCorrect()" id="button1"></button>
+    <button onclick="checkCorrect()" id="button2"></button>
+    <button onclick="checkCorrect()" id="button3"></button>
+    <button onclick="checkCorrect()" id="button4"></button>
+  </div>
+    
+
       </section>
     </main>
   </body>
