--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
     <div class= "card-timer">
         <div class = "timer-text">
         <div class="large-font timer-count">60</div>
-        <h5>seconds remaining</h5>
+        <div id="score">Score: 0</div>
       </div>
       </div>
         </nav>
 
     <header id="startRemove">
       <div class= "large-font">Coding Quiz</div>
+      <div>
       <button class="start-button">Start</button>
+      </div>
     </header>
 
 
